[gd_scene load_steps=6 format=2]

[ext_resource path="res://FallingPlatform.gd" type="Script" id=1]
[ext_resource path="res://graphics/tilesets/rocky.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5479, 9.63846 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.6363, 11.2294 )

[node name="FallingPlatform" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.96046e-08, 0 )
scale = Vector2( 1.10511, 1.36038 )
texture = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.0883865, -1.59099 )
shape = SubResource( 3 )

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Respawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_Respawn_timeout"]
